<resources>
    <string name="app_name">PopularMoviesApp</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="watched">Watched</string>
    <string name="playlist">Playlist</string>
    <string name="sort_by">Sort By</string>
    <string name="popularity">Popularity</string>
    <string name="rating">Rating</string>
    <string name="settings">Settings</string>
    <string name="terms">Terms</string>
</resources>
